Create user form registration and email activation_letter.
Create some new files, like utilities.py and other; Add changes into settings Django

--- a/bboard/main/templates/layout/basic.html
+++ b/bboard/main/templates/layout/basic.html
@@ -11,8 +11,8 @@
         {% include "main/static/css/style.css" %}
     <link rel="stylesheet" type="text/css"
     href="{% static 'css/style.css' %}">
-    {% bootstrap_javascript jquery='slim' %}
     </style>
+    {% bootstrap_javascript jquery='slim' %}
 </head>
 <body class="container-fluid">
 <header class="mb-4">
@@ -21,23 +21,22 @@
 <div class= "row">
     <ul class="col nav justify-content-end border">
     <li class="nav-item">
-        <a class="nav-link" href="#">Register</a></li>
+        <a class="nav-link" href="{% url 'main:register' %}">Register</a></li>
     {% if user.is_authenticated %}
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle"
             data-toggle=" dropdown"
             href="#" role="button" aria-haspopup="true"
             aria-expanded="false">Profile</a>
-        <div class="dropdown-menu" >
             <a class="dropdown-item" href= "{% url 'main:profile' %}">My ADS</a>
-            <a class="dropdown-item" href="#">Edit personal data</a>
-            <a class="dropdown-item" href="#">Change password</a>
+            <a class="dropdown-item" href="{% url 'main:profile_change' %}">Edit personal data</a>
+            <a class="dropdown-item" href="{% url 'main:password_change' %}">Change password</a>
             <div class="dropdown-divider" ></div>
                 <a class="dropdown-iterm" href="{% url 'main:logout' %}">Logout</a>
             <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Delete</a>
-        </div>
     </li>
+        <div class="dropdown-menu" ></div>
     {% else %}
     <li class="nav-item">
         <a class= "nav-link"
