--- a/bboard/main/templates/layout/basic.html
+++ b/bboard/main/templates/layout/basic.html
@@ -34,7 +34,7 @@
             <div class="dropdown-divider" ></div>
                 <a class="dropdown-iterm" href="{% url 'main:logout' %}">Logout</a>
             <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Delete</a>
+                <a class="dropdown-item" href="{% url 'main:profile_delete' %}">Delete</a>
     </li>
         <div class="dropdown-menu" ></div>
     {% else %}
