--- a/bboard/main/templates/main/login.html
+++ b/bboard/main/templates/main/login.html
@@ -14,6 +14,8 @@
   {% bootstrap_form form layout='horizontal' %}
   <input type="hidden" name="next" value="{{ next }}">
   {% buttons submit='Login' %} {% endbuttons %}
+  <a class= "nav-link"
+            href="{% url 'main:password_reset' %}">Forgot Password?</a>
 </form>
 {% endif %}
 {% endblock %}
