Now the user can view his ads and add his ads

--- a/bboard/main/templates/layout/basic.html
+++ b/bboard/main/templates/layout/basic.html
@@ -52,7 +52,7 @@
         <a class="nav-link" href="#">Housing</a>
         <a class="nav-link" href="#">Warehouses</a>
         <a class= "nav-link" href="#">Garages</a>
-    <span class= "nav-link root font-weight-bold" href="#">Transport</span>
+    <span class= "nav-link root font-weight-bold">Transport</span>
         <a class="nav-link" href="#">Passenger</a>
         <a class="nav-link" href="#">Cargo</a>
     <a class="nav-link root" href="{% url 'main:other' page='about' %}">
