--- a/bboard/main/templates/main/profile.html
+++ b/bboard/main/templates/main/profile.html
@@ -1,13 +1,34 @@
 {% extends "layout/basic.html" %}
 
-{% block title %} User Profile {% endblock %}
+{% load thumbnail %}
+{% load static %}
+{% load bootstrap4 %}
+
+{% block title %} {{ rubric }} {% endblock %}
 
 {% block content %}
-<h2>User Profile {{ user.username }}</h2>
-{% if user.first_name and user.last_name %}
-<p>Hello, {{ user.first_name }} {{ user.last_name }}!</p>
-{% else %}
-<p>Hello!</p>
+<h2 class="mb-2">{{ rubric }}</h2>
+{% if ads %}
+<p><a href="{% url 'main:profile_ads_add' %}"> Add Ads</a></p>
+<ul class="list-unstyled">
+    {% for ad in ads %}
+    <li class="media my-5 p-3 border">
+        {% url 'main:detail' rubric_pk=rubric.pk pk=ad.pk as url %}
+        <a href="{{ url }}{{ all }}">
+            {% if ad.image %}
+            <img class="mr-3" src="{% thumbnail ad.image 'default' %}">
+            {% endif %}
+        </a>
+        <div class="media-body">
+            <h3><a href="{{ url }}{{ all }}">{{ ad.title }}</a></h3>
+            <div>{{ ad.content }}</div>
+            <p class="text-right font-weight-bold">{{ ad.price }} usd.</p>
+            <p class="text-right font-italic">{{ ad.created_at }}</p>
+        </div>
+    </li>
+    {% endfor %}
+</ul>
+</div>
+<div>
 {% endif %}
-<h3>Your ADS</h3>
 {% endblock %}
